Actions
Bug #10882
closedmath headers should stop supporting K&R C
Start date:
2019-04-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
We use the conventional __P macro still in the math headers to support K&R C compilers. We should stop, like we have everywhere else.
Updated by Marcel Telka almost 4 years ago
- Subject changed from math headers should stop supprting K&R C to math headers should stop supporting K&R C
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 9938df9efd1c845888adf3e046421db350cf1088
commit 9938df9efd1c845888adf3e046421db350cf1088 Author: Richard Lowe <richlowe@richlowe.net> Date: 2019-05-09T19:37:39.000Z 10882 math headers should stop supporting K&R C Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions